Bug 468666 - Apply button not enabled after importing a VPN connection configuration file
Summary: Apply button not enabled after importing a VPN connection configuration file
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 469231 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-04-18 20:56 UTC by aeneid
Modified: 2024-12-23 18:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description aeneid 2023-04-18 20:56:20 UTC
SUMMARY
When you import a VPN connection file you have to click the "Apply" button to save the changes.
However the button does not get enabled after the import is done and the connection gets removed when the session ends.

STEPS TO REPRODUCE
Go to System Settings > Network > Connections and try to import a VPN connection configuration file.

WORKAROUND
If you modify the value of one of the text-fields the button gets enabled.

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 5.27.4
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9
Kernel Version: 6.2.11-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2023-04-18 21:54:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/243
Comment 2 Nicolas Fella 2023-04-18 21:56:04 UTC
The problem is that newly imported connections weren't properly saved to NetworkManager. Clicking apply just happens to work around that because saving an edited connection does save the connection properly
Comment 3 aeneid 2023-04-18 22:07:19 UTC
Ah i see, thank you for fixing the bug so quickly.
Comment 4 Nicolas Fella 2023-04-19 12:06:09 UTC
Git commit 024035190982ac5957310ef78fbc34b9c51766c2 by Nicolas Fella.
Committed on 19/04/2023 at 12:01.
Pushed by nicolasfella into branch 'master'.

Persist imported VPN connections on disk

Otherwise they disappear after a reboot

M  +1    -1    libs/handler.cpp

https://invent.kde.org/plasma/plasma-nm/commit/024035190982ac5957310ef78fbc34b9c51766c2
Comment 5 Nicolas Fella 2023-04-19 12:20:27 UTC
Git commit d795e92bd12705d0ce506c4ac900b0ccb7bdc69b by Nicolas Fella.
Committed on 19/04/2023 at 12:12.
Pushed by nicolasfella into branch 'Plasma/5.27'.

Persist imported VPN connections on disk

Otherwise they disappear after a reboot


(cherry picked from commit 024035190982ac5957310ef78fbc34b9c51766c2)

M  +1    -1    libs/handler.cpp

https://invent.kde.org/plasma/plasma-nm/commit/d795e92bd12705d0ce506c4ac900b0ccb7bdc69b
Comment 6 Nicolas Fella 2023-05-01 11:34:27 UTC
*** Bug 469231 has been marked as a duplicate of this bug. ***
Comment 7 Ben Cooksley 2024-12-23 18:23:48 UTC
Bulk transfer as requested in T17796