Persist imported VPN connections on disk

Otherwise they disappear after a reboot

BUG: 468666


(cherry picked from commit 024035190982ac5957310ef78fbc34b9c51766c2)